# Matrix

./: CMakeLists.txt  README.md
include/: GeoVector.hpp  Matrix.hpp  MyVector.hpp
src/: benchdet.cpp  funcdet.cpp  runner.cpp
tests/: CMakeLists.txt  gen_tests.py
tests/e2e/in/: 1.in  10.in  11.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
tests/unit/: test_matrix.cpp  test_myvector.cpp
